@@ -6,7 +6,7 @@ Build Instructions
 
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.6.3.2 or later: http://skarnet.org/software/skalibs/
+  - skalibs version 2.6.4.0 or later: http://skarnet.org/software/skalibs/
   - execline version 2.3.0.4 or later: http://skarnet.org/software/execline/
 
  This software will run on any operating system that implements
