@@ -49,6 +49,7 @@ initial state of the service. </li>
  <li> 1: the service was supposed to go up, but reported permanent failure </li>
  <li> 99: timed out </li>
  <li> 100: wrong usage </li>
+ <li> 102: the <a href="s6-supervise.html">s6-supervise</a> process monitoring the service died </li>
  <li> 111: system call failed </li>
 </ul>
 
