@@ -44,6 +44,7 @@ happen.
  <li> 0: success, the wanted state has been reached </li>
  <li> 99: timed out </li>
  <li> 100: wrong usage </li>
+ <li> 102: the <a href="s6-supervise.html">s6-supervise</a> process monitoring the service died </li>
  <li> 111: system call failed </li>
  <li> <em>n</em>: services were expected to come up, but <em>n</em> of them
 reported permanent failure </li>
