@@ -21,7 +21,7 @@
 <h2> in 2.7.0.1 </h2>
 
 <ul>
- <li> skalibs dependency bumped to 2.6.3.2. </li>
+ <li> skalibs dependency bumped to 2.6.4.0. </li>
 </ul>
 
 <h2> in 2.7.0.0 </h2>
