@@ -53,6 +53,7 @@ int main (int argc, char const *const *argv, char const *const *envp)
   if (!pid) strerr_diefu2sys(111, "spawn ", argv[1]) ;
   if (wantrestart) s6_svlisten_loop(&foo, 0, 1, 1, &deadline, spfd, &s6_svlisten_signal_handler) ;
   e = s6_svlisten_loop(&foo, wantup, wantready, 1, &deadline, spfd, &s6_svlisten_signal_handler) ;
-  if (e) strerr_dief2x(1, argv[0], " failed permanently: the finish script exited 125") ;
+  if (e < 0) strerr_dief1x(102, "supervisor died") ;
+  else if (e > 0) strerr_dief2x(1, argv[0], " failed permanently: the finish script exited 125") ;
   return 0 ;
 }
